--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Keeper App</title>
-    <link font-family: "Montserrat", sans-serif;
-    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css" />
-  	<link id="external-css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap" media="all">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Page Title</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
+  <link rel="stylesheet" href="styles.css">
 </head>
-
-  <body>
-    <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script defer src="/Keeper/static/js/main.ca94e548.js"></script>
+  <script src="../src/index.js"></script>
+</body>
 </html>
