--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Page Title</title>
+  <title>Keeper</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
-  <link rel="stylesheet" href="styles.css">
+  
 </head>
 <body>
   <div id="root"></div>
